# 2023-autumn-ab-python-hw-13-younggentech

./: .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
src/db/: engine.py  models.py
src/server/: dto.py  main.py
tests/: test_list_of_tasks.py
